@@ -2,8 +2,9 @@
 Changes in Version 0.9-20
 
   o GUI overhaul! Menus, new tools, new infrastructure, etc.
+    Note that playwith() arguments and playwith.options have changed.
 
-  o note that playwith() arguments and playwith.options have changed.
+  o Plot Settings overhaul, allows scales and axes to be customised.
 
   o latticeStyleGUI(), a stand-alone function to edit the lattice theme.
 
